log
Wed 08 May 2024 12:30:20 AM UTC: 
 tests:  1|8
total_score: 0/70
0f11f11
Wed 08 May 2024 12:34:10 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:15: error: expected ‘;’ before ‘return’
   46 |     return new
      |               ^
      |               ;
   47 |     return NULL;
      |     ~~~~~~     
Compilation failed
cc72c1b
Wed 08 May 2024 12:34:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7e09348
Wed 08 May 2024 12:34:31 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
aae5cfa
Wed 08 May 2024 12:42:51 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  3|7
total_score: 5/70
be0c0d4
Wed 08 May 2024 12:48:23 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
492c36a
Wed 08 May 2024 12:50:21 AM UTC: 
 treemap.c | 39 ++++++++++++++++++++-------------------
 1 file changed, 20 insertions(+), 19 deletions(-)
 tests:  3|7
total_score: 5/70
e981abc
Wed 08 May 2024 12:51:15 AM UTC: 
 treemap.c | 38 +++++++++++++++++++-------------------
 1 file changed, 19 insertions(+), 19 deletions(-)
 tests:  3|7
total_score: 5/70
57c4e14
Wed 08 May 2024 12:53:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
4a6ca31
Wed 08 May 2024 12:54:35 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
ed10eff
Wed 08 May 2024 12:55:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
4fad736
Wed 08 May 2024 12:59:50 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
38da077
Wed 08 May 2024 01:03:12 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|7
total_score: 5/70
cbfea51
Wed 08 May 2024 01:07:18 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:97:26: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   97 |                     free(pair);
      |                          ^~~~
      |                          Pair
treemap.c:97:26: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
244d508
Wed 08 May 2024 01:07:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0022c60
Wed 08 May 2024 01:13:25 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3253ca0
